kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uenroll-server
  namespace: uenroll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uenroll-server
  template:
    metadata:
      labels:
        app: uenroll-server
    spec:
      containers:
        - name: uenroll-server
          image: andychow326/uenroll-server:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uenroll-portal
  namespace: uenroll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uenroll-portal
  template:
    metadata:
      labels:
        app: uenroll-portal
    spec:
      volumes:
        - name: volume-nginx-conf
          configMap:
            name: uenroll-portal
      containers:
        - name: uenroll-portal
          image: andychow326/uenroll-portal:latest
          resources:
            limits:
              memory: "64Mi"
              cpu: "125m"
          volumeMounts:
            - name: volume-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - containerPort: 80
