kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uenroll-ingress
  namespace: uenroll
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  labels:
    name: uenroll-ingress
spec:
  rules:
    - host: uenroll.wahtheboi.com
      http:
        paths:
          - pathType: Prefix
            path: /trpc
            backend:
              service:
                name: uenroll-server
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: uenroll-portal
                port:
                  number: 80
  tls:
    - hosts:
        - uenroll.wahtheboi.com
      secretName: wildcard-wahtheboi-com-tls
